# minerl-rllib

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  Implementation.md  README.md  convert_data.py  env.py  generate_kmeans.py  minerl-rllib.ipynb  offline-data.ipynb  pyproject.toml  register_env.py  requirements.txt  rllib_test.py  rllib_train.py  train.py  train_ray.py  tune.py
config/: README.md  a2c.yaml  apex.yaml  bc.yaml  dist-dqn.yaml  dqn.yaml  dueling-ddqn.yaml  impala.yaml  minerl-a2c.yaml  minerl-impala-debug.yaml  minerl-impala.yaml  minerl-marwil.yaml  minerl-ppo.yaml  ppo.yaml  rainbow.yaml  sac-discrete.yaml  sac-offline.yaml  sac.yaml
config/custom_model/: README.md  impala.yaml  marwil.yaml  sac.yaml
config/untuned/: a2c.yaml  apex.yaml  dist-dqn.yaml  dqn.yaml  dueling-ddqn.yaml  impala.yaml  ppo.yaml  rainbow.yaml  sac.yaml
envs/: __init__.py  data.py  env.py  input.py
envs/wrappers/: __init__.py  action_wrapper.py  deterministic_wrapper.py  discrete_action_wrapper.py  gray_scale_wrapper.py  normalize.py
minerl_rllib/: convert_data.py  generate_kmeans.py  rllib_train.py
minerl_rllib/envs/: __init__.py  data.py  env.py  input.py  utils.py
minerl_rllib/envs/wrappers/: __init__.py  action_repeat_wrapper.py  action_wrapper.py  discrete_action_wrapper.py  normalize.py  observation_stack_wrapper.py  observation_wrapper.py  reward_penalty_wrapper.py  time_limit_wrapper.py
minerl_rllib/models/: __init__.py
minerl_rllib/models/torch/: __init__.py  action.py  baseline.py  cql.py  rnn.py
models/: __init__.py
models/torch/: __init__.py  baseline.py  pov.py  reward.py  rnn.py  vector.py
tests/: build_minerl.py  discrete.py
